# kalshi

./: .gitignore  Cargo.toml  TODO.md  archive  restart.sh  stop.sh
kalshi-api/: Cargo.toml
kalshi-api-spec/: Cargo.toml
kalshi-api-spec/src/: event.rs  lib.rs  market.rs  money.rs  ticker.rs
kalshi-api/src/: client.rs  keys.rs  lib.rs  main.rs  markets.rs
kalshi-bot/: Cargo.toml
kalshi-bot/src/: lib.rs  main.rs  system.rs
kalshi-bot/src/datasource/: daily_weather_observations.rs  daily_weather_report.rs  datasource.rs  example.rs  hourly_weather_observations.rs  hourly_weather_table.rs  hourly_weather_timeseries.rs  mod.rs  name.rs  weather_forecast.rs
kalshi-bot/src/math/: stats.rs
kalshi-bot/src/protocol/: protocol.rs
kalshi-bot/src/strategy/: dump_if_temp_higher.rs  example.rs  forecast_notifier.rs  mod.rs  name.rs  strategy.rs  utils.rs  weather_better.rs
kalshi_bot/: Cargo.toml
kalshi_bot/src/datasource/: example.rs  mod.rs  weather_forecast.rs
kalshi_bot/src/protocol/: datetime.rs  protocol.rs
kalshi_bot/src/strategy/: strategy.rs
protocol/: Cargo.toml
protocol/src/: datetime.rs  lib.rs  protocol.rs
scripts/: generate_openapi.sh
src/: lib.rs  main.rs
src/datasource/: datasource.rs  example.rs
src/protocol/: protocol.rs
src/strategy/: example.rs  mod.rs  strategy.rs
telegram/: Cargo.toml
telegram/src/: bot.rs  client.rs  lib.rs  main.rs  message.rs
weather/: Cargo.toml
weather/src/: coords.rs  lib.rs  main.rs  model.rs  parser.rs  station.rs  temperature.rs
weather/src/forecast/: backtest.rs  fetcher.rs  http.rs  mod.rs  model.rs  parser.rs
weather/src/observations/: daily.rs  hourly.rs  mod.rs  nws_daily_report.rs  nws_hourly_table.rs  nws_hourly_timeseries.rs
