[package]
name = "kalshi-api-spec"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol/" }

anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
rust_decimal = "1.38.0"
