[package]
name = "kalshi-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
reqwest = "0.12.23"
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1.0.100"
chrono-tz = { version = "0.10.4", features = ["serde"] }
dotenvy = "0.15.7"
