[package]
name = "kalshi-api"
version = "0.1.0"
edition = "2024"

[dependencies]
kalshi-api-spec = { path = "../kalshi-api-spec" }

tokio = { version = "1.40", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1.0.100"
chrono-tz = { version = "0.10.4", features = ["serde"] }
dotenvy = "0.15.7"
rsa = "0.9.8"
rand = "0.8.5"
sha2 = "0.10.9"
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
serde_json = "1.0.145"
