[package]
name = "kalshi-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
bincode = { version = "2.0", features = ["serde"] }
futures = "0.3.31"
reqwest = "0.12.23"
clap = { version = "4.5.48", features = ["derive"] }
weather = { path = "../weather" }
