[package]
name = "kalshi-bot"
version = "0.1.0"
edition = "2024"
default-run = "kalshi-bot"

[dependencies]
weather = { path = "../weather" }
protocol = { path = "../protocol" }
telegram = { path = "../telegram" }

tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
futures = "0.3.31"
reqwest = "0.12.23"
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1.0.100"
tera = "1.20.0"
colored = "3.0.0"
async-stream = "0.3.6"
chrono-tz = { version = "0.10.4", features = ["serde"] }
bitcode = { version = "0.6.7", features = ["derive", "serde"] }
dotenvy = "0.15.7"
statrs = "0.18.0"

[dev-dependencies]
approx = "0.5.1"
