[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
futures = "0.3.31"
anyhow = "1.0.100"
bitcode = { version = "0.6.7", features = ["derive", "serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
