[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
grib = "0.13.0"
reqwest = "0.12.23"
tokio = { version = "1.40", features = ["full"] }
regex = "1.11.3"
strum = "0.27"
strum_macros = "0.27"
serde_urlencoded = "0.7"

protocol = { path = "../protocol" }
fantoccini = "0.22.0"
futures = "0.3.31"
serde_json = "1.0.145"
scraper = "0.24.0"
serde = "1.0.228"
async-stream = "0.3.6"
bitcode = { version = "0.6.7", features = ["derive", "serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
